# cpp-math-lib

./: CMakeLists.txt
examples/: CMakeLists.txt  matrix.cpp  vector.cpp
scripts/: build_tests.sh  format.sh  run_example.sh  run_tests.sh
src/: CMakeLists.txt  common.hpp  constants.hpp  matrix.hpp  units.hpp  vec_mat_operations.hpp  vector.hpp
tests/: CMakeLists.txt  matrix_tests.cpp  matrix_unittest.cpp  tests_common.hpp  vec2_tests.cpp  vec3_tests.cpp  vec_mat_ops_tests.cpp  vec_tests.cpp  vector_unittest.cpp
