function(create_test test_name source_file)
  add_executable(${test_name} ${source_file})
  target_link_libraries(${test_name} Doctest CppMathLib)
  add_test(NAME ${test_name} COMMAND ${test_name})
endfunction()

create_test(matrix_tests matrix_tests.cpp)
create_test(vec_tests vec_tests.cpp)
create_test(vec2_tests vec2_tests.cpp)
create_test(vec3_tests vec3_tests.cpp)
create_test(vec_mat_ops_tests vec_mat_ops_tests.cpp)
